add root style utilities

--- a/src/app/styling-components/home/home.component.html
+++ b/src/app/styling-components/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<header class="header">
+  <div class="header__content">
+    <h1 class="header__title">{{ title }}</h1>
+    <span class="header__sub-title">{{ subTitle }}</span>
+  </div>
+  <!-- add navbar primary -->
+</header>
+<div class="content"></div>
+<footer class="footer">
+  <!-- add navbar secondary -->
+  <div class="footer__content">
+    <span class="footer__title">{{ title }}</span>
+    <span class="footer__sub-title">{{ subTitle }}</span>
+  </div>
+</footer>
