--- a/src/app/styling-components/home/home.component.html
+++ b/src/app/styling-components/home/home.component.html
@@ -3,11 +3,11 @@
     <h1 class="header__title">{{ title }}</h1>
     <span class="header__sub-title">{{ subTitle }}</span>
   </div>
-  <!-- add navbar primary -->
+  <app-navbar-primary></app-navbar-primary>
 </header>
 <div class="content"></div>
 <footer class="footer">
-  <!-- add navbar secondary -->
+  <app-navbar-secondary></app-navbar-secondary>
   <div class="footer__content">
     <span class="footer__title">{{ title }}</span>
     <span class="footer__sub-title">{{ subTitle }}</span>
