create thumbnail-list and promo component

--- a/src/app/styling-components/home/home.component.html
+++ b/src/app/styling-components/home/home.component.html
@@ -5,7 +5,28 @@
   </div>
   <app-navbar-primary></app-navbar-primary>
 </header>
-<div class="content"></div>
+<div class="content">
+  <div class="content__sections">
+    <div class="content__primary">
+      <h2 class="content__title">¿Estilos en Angular?</h2>
+      <p class="content__paragraph">
+        Angular revoluciona la forma en que diseña CSS para aplicaciones web modernas. Pero antes de
+        que puedas convertirte en un ninja de estilo angular, debes dar un paso atrás y considerar
+        las muchas y diferentes maneras en que se pueden hacer las cosas. En este curso, Diseño de
+        aplicaciones angulares, explorará cómo el marco se alinea con los componentes web y lo que
+        eso significa para agregar estilos a componentes y aplicaciones en general. A lo largo de
+        este curso, desarrollará sistemas orientado a la organización, escala y mantenibilidad para
+        HTML y CSS dentro de aplicaciones Angular. A medida que se sienta más cómodo agregando y
+        diseñando componentes dentro de estos sistemas, podrá considerar los temas de los
+        componentes y las formas en que puede transformar su apariencia bajo ciertas circunstancias.
+        Al final de este curso, tendrá un sólido conocimiento de cómo Angular procesa CSS y las
+        diferentes formas en que se puede aprovechar como parte de un diseño general sistema para
+        crear aplicaciones web hermosas, organizadas, mantenibles y preparadas para el futuro.
+      </p>
+      <app-promo></app-promo>
+    </div>
+  </div>
+</div>
 <footer class="footer">
   <app-navbar-secondary></app-navbar-secondary>
   <div class="footer__content">
