create modal component

--- a/src/app/styling-components/home/home.component.html
+++ b/src/app/styling-components/home/home.component.html
@@ -23,6 +23,11 @@
         diferentes formas en que se puede aprovechar como parte de un diseño general sistema para
         crear aplicaciones web hermosas, organizadas, mantenibles y preparadas para el futuro.
       </p>
+      <p class="content__paragraph">
+        <app-modal class="color--02">
+          <strong>Click here to learn More!</strong>
+        </app-modal>
+      </p>
       <app-promo></app-promo>
     </div>
   </div>
