create message component

--- a/src/app/styling-components/home/home.component.html
+++ b/src/app/styling-components/home/home.component.html
@@ -77,6 +77,29 @@
           </app-modal-content>
         </app-modal>
       </p>
+      <p class="content__paragraph">
+        <app-modal class="color--03">
+          <strong>¡Click para ver modal secundario!</strong>
+          <app-modal-content>
+            <h1>Estilo de aplicaciones angular</h1>
+            <app-message class="layout--02">
+              <app-message-title>¡Tu cuenta expirará pronto!</app-message-title>
+              <app-message-content>
+                Su cuenta caducará en los próximos treinta días.
+                Por favor actualice su método de pago en su cuenta.
+              </app-message-content>
+            </app-message>
+          </app-modal-content>
+          <app-modal-highlight>
+            <app-message class="layout--02">
+              <app-message-title>Offer Ends Soon!</app-message-title>
+              <app-message-content>
+                ¡Actúe rápido y renueve su cuenta en los próximos cinco días para recibir un 20% de descuento!
+              </app-message-content>
+            </app-message>
+          </app-modal-highlight>
+        </app-modal>
+      </p>
       <app-promo></app-promo>
     </div>
   </div>
