--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,38 @@ html {
 body {
   margin: 0;
 }
+
+.loader {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  animation: spin 1.2s linear infinite;
+
+  &::after,
+  &::before {
+    content: '';
+    position: absolute;
+    border-radius: inherit;
+  }
+
+  &::before {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, #f0c 0%, #80f 100%);
+  }
+
+  &::after {
+    width: 85%;
+    height: 85%;
+    background: #171717;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
