create hero table layout

--- a/src/app/reactive-code/heroes/heroes.component.html
+++ b/src/app/reactive-code/heroes/heroes.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<header>
+  <h1>Heroes Workshop</h1>
+</header>
+<main class="main-content">
+  <router-outlet></router-outlet>
+</main>
