--- a/src/app/reactive-code/heroes/heroes.component.scss
+++ b/src/app/reactive-code/heroes/heroes.component.scss
@@ -1,4 +1,20 @@
 :host {
-  width: 100vw;
+  max-height: 100vh;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+header {
+  background: linear-gradient(0deg, #f0c 0%, #80f 100%);
+  color: #fff;
+  text-align: center;
+}
+
+.main-content {
+  flex-grow: 1;
+  max-height: calc(100vh - 100px);
+  overflow: auto;
+  padding: 40px;
 }
