--- a/src/app/reactive-code/hero-table/hero-table.component.html
+++ b/src/app/reactive-code/hero-table/hero-table.component.html
@@ -20,4 +20,8 @@
     </div>
   </div>
 </div>
-<div class="table-content"></div>
+<div class="table-content">
+  <div *ngFor="let hero of heroes$ | async">
+    <h1>{{ hero.name }}</h1>
+  </div>
+</div>
