--- a/src/app/reactive-code/hero-table/hero-table.component.scss
+++ b/src/app/reactive-code/hero-table/hero-table.component.scss
@@ -9,6 +9,7 @@
 .tool-bar {
   display: flex;
   justify-content: space-between;
+  margin: 60px 0;
 
   label {
     display: block;
@@ -20,6 +21,8 @@
     padding: 10px;
     border-radius: 12px;
     min-width: 200px;
+    font-size: 16px;
+    font-weight: bold;
   }
 }
 
@@ -53,6 +56,17 @@ button {
 
   &:hover::before {
     visibility: visible;
+  }
+}
+
+.table-content {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-gap: 10px;
+
+  app-hero-card {
+    width: 100%;
+    height: 100%;
   }
 }
 
