--- a/src/app/reactive-code/hero-table/hero-table.component.html
+++ b/src/app/reactive-code/hero-table/hero-table.component.html
@@ -1,4 +1,4 @@
-<div class="loader"></div>
+<!--<div class="loader"></div>-->
 <div class="tool-bar">
   <div class="search-tool">
     <label for="heroSearch">Search:</label>
