--- a/src/app/reactive-code/hero-table/hero-table.component.scss
+++ b/src/app/reactive-code/hero-table/hero-table.component.scss
@@ -9,7 +9,7 @@
 .tool-bar {
   display: flex;
   justify-content: space-between;
-  margin: 60px 0;
+  margin-bottom: 60px;
 
   label {
     display: block;
