--- a/src/app/reactive-code/heroes/heroes.component.scss
+++ b/src/app/reactive-code/heroes/heroes.component.scss
@@ -7,7 +7,7 @@
 }
 
 header {
-  background: linear-gradient(0deg, #f0c 0%, #80f 100%);
+  background: linear-gradient(to left, #f0c 0%, #80f 100%);
   color: #fff;
   text-align: center;
 }
