--- a/src/app/reactive-code/hero-card/hero-card.component.scss
+++ b/src/app/reactive-code/hero-card/hero-card.component.scss
@@ -1,13 +1,30 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 140px;
   width: 100px;
   transition: all 250ms linear, transform 100ms linear;
   transform: scale(1);
 
+  div {
+    height: 100%;
+  }
+
   img {
-    max-width: 100%;
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 160px;
+  }
+
+  h2 {
+    display: block;
+    background: #222;
+    border-top: 3px solid red;
+    color: #fff;
+    font-size: 20px;
+    margin: 0;
+    padding: 25px 15px;
+    height: calc(100% - 160px);
   }
 }
 
