--- a/src/app/reactive-code/hero-table/hero-table.component.html
+++ b/src/app/reactive-code/hero-table/hero-table.component.html
@@ -1,23 +1,33 @@
-<!--<div class="loader"></div>-->
-<div class="tool-bar">
-  <div class="search-tool">
-    <label for="heroSearch">Search:</label>
-    <input type="text" id="heroSearch" (input)="doSearch($event)" />
-  </div>
-  <div class="page-tool">
-    <label>Page {{ page$ | async }} of {{ totalPages$ | async }}</label>
-    <div class="buttons">
-      <button (click)="movePageBy(-1)">Prev</button>
-      <button (click)="movePageBy(+1)">Next</button>
+<ng-container *ngIf="vm$ | async as vm">
+  <div class="tool-bar">
+    <div class="search-tool">
+      <label for="heroSearch">Search:</label>
+      <input type="text" id="heroSearch" [value]="vm.search" (input)="doSearch($event)" />
+    </div>
+    <div class="page-tool">
+      <label>Page {{ vm.page }} of {{ vm.totalPages }}</label>
+      <div class="buttons">
+        <button (click)="movePageBy(-1)" [disabled]="vm.disablePrev">Prev</button>
+        <button (click)="movePageBy(+1)" [disabled]="vm.disableNext">Next</button>
+      </div>
+    </div>
+    <div class="result-tool">
+      <label>Show results (total: {{ vm.totalResults }})</label>
+      <div class="buttons">
+        <button
+          *ngFor="let limit of limits"
+          (click)="setLimit(limit)"
+          [disabled]="vm.limit === limit"
+        >
+          {{ limit }}
+        </button>
+      </div>
     </div>
   </div>
-  <div class="result-tool">
-    <label>Show results (total: {{ totalResults$ | async }})</label>
-    <div class="buttons">
-      <button *ngFor="let limit of limits" (click)="setLimit(limit)">{{ limit }}</button>
+  <div class="loader" *ngIf="vm.loading; else heroes"></div>
+  <ng-template #heroes>
+    <div class="table-content">
+      <app-hero-card *ngFor="let hero of vm.heroes" [hero]="hero"></app-hero-card>
     </div>
-  </div>
-</div>
-<div class="table-content">
-  <app-hero-card *ngFor="let hero of heroes$ | async" [hero]="hero"></app-hero-card>
-</div>
+  </ng-template>
+</ng-container>
