--- a/src/app/reactive-ecommerce/products/products.component.scss
+++ b/src/app/reactive-ecommerce/products/products.component.scss
@@ -1,5 +1,25 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1em;
+  grid-gap: 2em;
+}
+
+.product {
+  border: 1px solid #ccc;
+  padding: 1em;
+
+  &-image {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 1em;
+
+    img {
+      object-fit: contain;
+    }
+  }
+
+  h2 {
+    font-size: 1.1em;
+  }
 }
