--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,8 +59,22 @@ h6 {
   }
 }
 
+.fade {
+  animation: fade-in 0.3s ease-in-out;
+}
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
