create alert component

--- a/src/app/reactive-ecommerce/products/products.component.html
+++ b/src/app/reactive-ecommerce/products/products.component.html
@@ -1,3 +1,4 @@
+<app-alert></app-alert>
 <div class="grid">
   <ng-container *ngIf="products$ | async as products; else loading">
     <div class="product fade" *ngFor="let product of products">
