--- a/src/app/reactive-ecommerce/ecommerce.component.scss
+++ b/src/app/reactive-ecommerce/ecommerce.component.scss
@@ -1,3 +1,3 @@
-@use 'scss/global';
-@use 'scss/top-bar';
-@use 'scss/header';
+@use 'shared/scss/global';
+@use 'shared/scss/top-bar';
+@use 'shared/scss/header';
