display category badges

--- a/src/app/reactive-ecommerce/products/product-list/product-list.component.html
+++ b/src/app/reactive-ecommerce/products/product-list/product-list.component.html
@@ -1,4 +1,9 @@
 <app-alert></app-alert>
+<ul class="categories">
+  <li *ngFor="let category of categories$ | async" (click)="selectCategory(category)">
+    {{ category }}
+  </li>
+</ul>
 <div class="grid">
   <ng-container *ngIf="products$ | async as products; else loading">
     <div class="product fade" *ngFor="let product of products">
