--- a/src/app/reactive-ecommerce/products/product-list/product-list.component.scss
+++ b/src/app/reactive-ecommerce/products/product-list/product-list.component.scss
@@ -4,6 +4,19 @@
   grid-gap: 2em;
 }
 
+.categories {
+  margin-bottom: 2em;
+
+  li {
+    display: inline-block;
+    margin-right: 1em;
+    border-radius: 3em;
+    background: #ebedec;
+    padding: 0.5em 1em;
+    cursor: pointer;
+  }
+}
+
 .product {
   border: 1px solid #ccc;
   padding: 1em;
