--- a/src/app/reactive-ecommerce/products/product-list/product-list.component.scss
+++ b/src/app/reactive-ecommerce/products/product-list/product-list.component.scss
@@ -14,6 +14,12 @@
     background: #ebedec;
     padding: 0.5em 1em;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
+
+    &.active {
+      background: var(--primary);
+      color: #fff;
+    }
   }
 }
 
