create single product layout

--- a/src/app/reactive-ecommerce/products/product-list/product-list.component.html
+++ b/src/app/reactive-ecommerce/products/product-list/product-list.component.html
@@ -19,7 +19,7 @@
           <strong class="product-price">${{ product.price }}</strong>
         </div>
         <p class="product-description">{{ product.description }}</p>
-        <button class="product-btn">Add to cart</button>
+        <button class="product-btn">Add to Cart</button>
       </div>
     </div>
   </ng-container>
