create cart layout

--- a/src/app/reactive-ecommerce/ecommerce.component.html
+++ b/src/app/reactive-ecommerce/ecommerce.component.html
@@ -13,10 +13,12 @@
 </div>
 <header class="header">
   <div class="container">
-    <h1>
-      <span class="material-symbols-outlined"> shopping_bag </span>
-      E-commerce
-    </h1>
+    <a routerLink="/">
+      <h1>
+        <span class="material-symbols-outlined"> shopping_bag </span>
+        E-commerce
+      </h1>
+    </a>
     <nav>
       <a href="#">Categories</a>
       <a href="#">Suppliers</a>
@@ -30,7 +32,7 @@
         <span class="material-symbols-outlined"> person_outline </span>
         Account
       </a>
-      <a href="#">
+      <a routerLink="./cart">
         <span class="material-symbols-outlined"> shopping_cart </span>
         Cart
       </a>
