--- a/src/app/reactive-ecommerce/product/product.component.scss
+++ b/src/app/reactive-ecommerce/product/product.component.scss
@@ -26,6 +26,10 @@
     h2 {
       font-size: 2em;
     }
+
+    p {
+      width: 85%;
+    }
   }
 
   &-price {
@@ -40,7 +44,7 @@
   }
 
   &-counter {
-    background: #ebedec;
+    background: #f6f6f6;
     border-radius: 2em;
     margin: 3em 0;
 
