--- a/src/app/reactive-ecommerce/product/product.component.html
+++ b/src/app/reactive-ecommerce/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="product">
+<div class="product" *ngIf="product$ | async">
   <div class="product-img">
     <img
       src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
