--- a/src/app/reactive-ecommerce/product/product.component.html
+++ b/src/app/reactive-ecommerce/product/product.component.html
@@ -1,17 +1,13 @@
-<div class="product" *ngIf="product$ | async">
+<div class="product" *ngIf="product$ | async as product; else loading">
   <div class="product-img">
-    <img
-      src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-      alt="Product name"
-    />
+    <img [src]="product.image" [alt]="product.title" />
   </div>
   <div class="product-description">
-    <h2>Airpods - Max</h2>
+    <h2>{{ product.title }}</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus assumenda atque eaque eos
-      est incidunt iusto necessitatibus repudiandae rerum velit.
+      {{ product.description }}
     </p>
-    <strong class="product-price">$569</strong>
+    <strong class="product-price">{{ product.price | currency }}</strong>
     <small>Suggested payments with 6 months special financing</small>
     <div class="product-buttons">
       <div class="product-counter">
@@ -39,3 +35,18 @@
     </ul>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="product">
+    <div style="width: 45%">
+      <ngx-skeleton-loader [theme]="{ height: '400px' }"></ngx-skeleton-loader>
+    </div>
+    <div class="product-description">
+      <ngx-skeleton-loader
+        *ngFor="let item of skeleton"
+        [theme]="item"
+        [count]="item.count || 1"
+      ></ngx-skeleton-loader>
+    </div>
+  </div>
+</ng-template>
