--- a/src/app/reactive-ecommerce/product/product.component.scss
+++ b/src/app/reactive-ecommerce/product/product.component.scss
@@ -55,6 +55,7 @@
       cursor: pointer;
       font-size: 1.1em;
       vertical-align: middle;
+      user-select: none;
 
       &:nth-child(2) {
         cursor: default;
